datastores/postgres/apps/zeus/test/mocks/test/service_eth_indexer.yaml
apiVersion: v1
kind: Service
metadata:
  name: "eth-indexer"
  labels:
    app.kubernetes.io/name: "eth-indexer"
    app.kubernetes.io/managed-by: "zeus"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
    - port: 81
      name: tcp-sentinel
      targetPort: http2
  selector:
    app.kubernetes.io/name: "eth-indexer"
    app.kubernetes.io/managed-by: "zeus"
